2007-05-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py:
	Add contracts and clean up code.

2007-05-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/output.py:
	Minor changes.

2007-05-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/cellrend/__init__.py:
	* gaupol/gtk/cellrend/multiline.py:
	* gaupol/gtk/cellrend/time.py:
	Minor changes.

2007-05-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/entries.py:
	Allow negative values.
	Add contracts.

	* gaupol/gtk/util.py (get_contractual_metaclass):
	New function to help avoid metaclass conflicts.

2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/errors.py:
	* gaupol/gtk/index.py:
	Minor changes.

2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (asserted_return):
	New decorator to replace silent(AssertionError).
	Fix all references.

2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py:
	* gaupol/determiner.py:
	* gaupol/liner.py:
	Minor changes to contracts.

	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/conf/config.py:
	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/wrappers.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/util.py:
	Add contracts and clean up code.

	* gaupol/gtk/unittest/case.py:
	* gaupol/unittest/case.py:
	Import Project, Page and Application locally.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/i18n.py:
	* gaupol/gtk/main.py:
	Remove i18n and move stuff to main.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/unittest/case.py:
	* gaupol/gtk/unittest/__init__.py:
	Minor changes.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/reversion:
	* gaupol/reversion/test:
	Set svn:ignore properties on directories.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/actions/action.py:
	Remove leading underscore from filename.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents:
	* gaupol/base/mutables.py:
	* gaupol/files/subfile.py: